Update CRUD Gestion Carpooling

--- a/PiFrontEnd/src/app/home/home.component.html
+++ b/PiFrontEnd/src/app/home/home.component.html
@@ -113,6 +113,21 @@
                                                     Sibebar</a></li>
                                         </ul>
                                     </li>
+
+
+
+                                    <li class="nav-item">
+                                        <a class="dd-menu collapsed" href="javascript:void(0)"
+                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-5"
+                                            aria-controls="navbarSupportedContent" aria-expanded="false"
+                                            aria-label="Toggle navigation" routerLink="addcarpooling" >Carpooling</a>
+                                            
+                                    </li>
+                                    
+
+
+
+
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="login-button">
