--- a/PiFrontEnd/src/app/MarketPlacee/add-product-back/add-product-back.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/add-product-back/add-product-back.component.html
@@ -7,11 +7,11 @@
 
 <div class="form-outline mb-4">
 <label class="form-label" for="form3Example1m"> Name</label>
-<input class="form-control " type="text" id="form3Example1m" name="name" [(ngModel)]="product.name" required minlength="3" maxlength="10" #name="ngModel">
+<input class="form-control " type="text" id="form3Example1m" name="name" [(ngModel)]="product.name" required minlength="3" maxlength="20" #name="ngModel">
 <div *ngIf="name.invalid && (name.dirty || name.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
     <div *ngIf="name.errors && name.errors['required']">Name is required.</div>
     <div *ngIf="name.errors && name.errors['minlength']">Name must be at least 3 characters long.</div>
-    <div *ngIf="name.errors && name.errors['maxlength']">Name cannot exceed 10 characters.</div>
+    <div *ngIf="name.errors && name.errors['maxlength']">Name cannot exceed 20 characters.</div>
   </div>
 
 </div>
@@ -31,21 +31,21 @@
 
 <div class="form-outline mb-4">
 <label class="form-label" for="form3Example1n">brand</label>
-<input class="form-control" type="text" id="form3Example1n" name="brand"  [(ngModel)]="product.brand" required minlength="2" maxlength="10" #brand="ngModel">
+<input class="form-control" type="text" id="form3Example1n" name="brand"  [(ngModel)]="product.brand" required minlength="2" maxlength="20" #brand="ngModel">
 <div *ngIf="brand.invalid && (brand.dirty || brand.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
   <div *ngIf="brand.errors && brand.errors['required']">Brand is required.</div>
   <div *ngIf="brand.errors && brand.errors['minlength']">Brand must be at least 2 characters long.</div>
-  <div *ngIf="brand.errors && brand.errors['maxlength']">Brand cannot exceed 10 characters.</div>
+  <div *ngIf="brand.errors && brand.errors['maxlength']">Brand cannot exceed 20 characters.</div>
 </div>
 
 </div>
 <div class="form-outline mb-4">
     <label class="form-label" for="form3Example1n">adresse</label>
-    <input class="form-control" type="text" id="form3Example1n" name="adresse"  [(ngModel)]="product.adresse"  required minlength="5" maxlength="10" #adresse="ngModel">
+    <input class="form-control" type="text" id="form3Example1n" name="adresse"  [(ngModel)]="product.adresse"  required minlength="5" maxlength="20" #adresse="ngModel">
     <div *ngIf="adresse.invalid && (adresse.dirty || adresse.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
       <div *ngIf="adresse.errors && adresse.errors['required']">Adresse is required.</div>
       <div *ngIf="adresse.errors && adresse.errors['minlength']">Adresse must be at least 5 characters long.</div>
-      <div *ngIf="adresse.errors && adresse.errors['maxlength']">Adresse cannot exceed 10 characters.</div>
+      <div *ngIf="adresse.errors && adresse.errors['maxlength']">Adresse cannot exceed 20 characters.</div>
     </div>
   </div>
   <div class="form-outline mb-4">
@@ -62,7 +62,7 @@
     <div *ngIf="price.invalid && (price.dirty || price.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
       <div *ngIf="price.errors && price.errors['required']">Price is required.</div>
       <div *ngIf="price.errors && price.errors['min']">Price cannot be negative.</div>
-      <div *ngIf="price.errors && price.errors['max']">Price cannot exceed $10,000.</div>
+      <div *ngIf="price.errors && price.errors['max']">Price cannot exceed 10,000 dt</div>
     </div>
   </div>
 <div class="row">
