--- a/PiFrontEnd/src/app/MarketPlacee/register-product/register-product.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/register-product/register-product.component.html
@@ -12,127 +12,7 @@
     <!-- /End Preloader -->
 
     <!-- Start Header Area -->
-    <header class="header navbar-area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <div class="nav-inner">
-                        <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo/logo.svg" alt="Logo">
-                            </a>
-                            <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="toggler-icon"></span>
-                                <span class="toggler-icon"></span>
-                                <span class="toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
-                                <ul id="nav" class="navbar-nav ms-auto">
-                                    <li class="nav-item">
-                                        <a class=" dd-menu collapsed" href="javascript:void(0)"
-                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-1"
-                                            aria-controls="navbarSupportedContent" aria-expanded="false"
-                                            aria-label="Toggle navigation">Home</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-1">
-                                            <li class="nav-item"><a href="index.html">Home </a></li>
-                                            
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a routerLink="/marketplace" href="category.html" aria-label="Toggle navigation">Categories</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class=" dd-menu collapsed" href="javascript:void(0)"
-                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-3"
-                                            aria-controls="navbarSupportedContent" aria-expanded="false"
-                                            aria-label="Toggle navigation">Listings</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-3">
-                                            <li class="nav-item"><a href="item-listing-grid.html">Ad Grid</a></li>
-                                            <li class="nav-item"><a href="item-listing-list.html">Ad Listing</a></li>
-                                            <li class="nav-item"><a href="item-details.html">Ad Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class=" active dd-menu collapsed" href="javascript:void(0)"
-                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-4"
-                                            aria-controls="navbarSupportedContent" aria-expanded="false"
-                                            aria-label="Toggle navigation">Pages</a>
-                                        <ul class="sub-menu mega-menu collapse" id="submenu-1-4">
-                                            <li class="single-block">
-                                                <ul>
-                                                    <li class="mega-menu-title">Essential Pages</li>
-                                                    <li class="nav-item"><a href="about-us.html">About Us</a></li>
-                                                    <li class="nav-item"><a href="item-details.html">Ads Details</a></li>
-                                                    <li class="nav-item"><a href="post-item.html">Ads Post</a></li>
-                                                    <li class="nav-item"><a href="pricing.html">Pricing Table</a></li>
-                                                    <li class="nav-item"><a href="registration.html">Sign Up</a></li>
-                                                    <li class="nav-item"><a href="login.html">Sign In</a></li>
-                                                    <li class="nav-item"><a href="contact.html">Contact Us</a></li>
-                                                    <li class="nav-item"><a href="faq.html">FAQ</a></li>
-                                                    <li class="nav-item"><a href="404.html">Error Page</a></li>
-                                                    <li class="nav-item"><a href="mail-success.html">Mail Success</a>
-                                                    </li>
-                                                    <li class="nav-item"><a href="coming-soon.html">Comming Soon</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="single-block">
-                                                <ul>
-                                                    <li class="mega-menu-title">Dashboard</li>
-                                                    <li class="nav-item"><a href="dashboard.html">Account Overview</a>
-                                                    </li>
-                                                    <li class="nav-item"><a href="profile-settings.html">My Profile</a>
-                                                    </li>
-                                                    <li class="nav-item"><a href="my-items.html">My Ads</a></li>
-                                                    <li class="nav-item"><a href="favourite-items.html">Favorite Ads</a>
-                                                    </li>
-                                                    <li class="nav-item active"><a href="post-item.html">Ad post</a></li>
-                                                    <li class="nav-item"><a href="bookmarked-items.html">Bookmarked Ad</a>
-                                                    </li>
-                                                    <li class="nav-item"><a href="messages.html">Messages</a></li>
-                                                    <li class="nav-item"><a href="delete-account.html">Close account</a>
-                                                    </li>
-                                                    <li class="nav-item"><a href="invoice.html">Invoice</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class=" dd-menu collapsed" href="javascript:void(0)"
-                                            data-bs-toggle="collapse" data-bs-target="#submenu-1-5"
-                                            aria-controls="navbarSupportedContent" aria-expanded="false"
-                                            aria-label="Toggle navigation">Blog</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-5">
-                                            <li class="nav-item"><a href="blog-grid-sidebar.html">Blog Grid Sidebar</a>
-                                            </li>
-                                            <li class="nav-item"><a href="blog-single.html">Blog Single</a></li>
-                                            <li class="nav-item"><a href="blog-single-sidebar.html">Blog Single
-                                                    Sibebar</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div> <!-- navbar collapse -->
-                            <div class="login-button">
-                                <ul>
-                                    <li>
-                                        <a href="login.html"><i class="lni lni-enter"></i> Login</a>
-                                    </li>
-                                    <li>
-                                        <a href="registration.html"><i class="lni lni-user"></i> Register</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="button header-button">
-                                <a href="post-item.html" class="btn">Post an Ad</a>
-                            </div>
-                        </nav> <!-- navbar -->
-                    </div>
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </header>
+
     <!-- End Header Area -->
     
     <!-- Start Breadcrumbs -->
@@ -219,11 +99,11 @@
                                   
                                         <div class="form-outline mb-4">
                                             <label class="form-label" for="form3Example1m"> Name</label>
-                                            <input class="form-control " type="text" id="form3Example1m" name="name" [(ngModel)]="product.name" required minlength="3" maxlength="10" #name="ngModel">
+                                            <input class="form-control " type="text" id="form3Example1m" name="name" [(ngModel)]="product.name" required minlength="3" maxlength="20" #name="ngModel">
                                             <div *ngIf="name.invalid && (name.dirty || name.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
                                                 <div *ngIf="name.errors && name.errors['required']">Name is required.</div>
                                                 <div *ngIf="name.errors && name.errors['minlength']">Name must be at least 3 characters long.</div>
-                                                <div *ngIf="name.errors && name.errors['maxlength']">Name cannot exceed 10 characters.</div>
+                                                <div *ngIf="name.errors && name.errors['maxlength']">Name cannot exceed 20 characters.</div>
                                               </div>
                                             
                                             </div>
@@ -243,21 +123,21 @@
                                             
                                             <div class="form-outline mb-4">
                                             <label class="form-label" for="form3Example1n">brand</label>
-                                            <input class="form-control" type="text" id="form3Example1n" name="brand"  [(ngModel)]="product.brand" required minlength="2" maxlength="10" #brand="ngModel">
+                                            <input class="form-control" type="text" id="form3Example1n" name="brand"  [(ngModel)]="product.brand" required minlength="2" maxlength="20" #brand="ngModel">
                                             <div *ngIf="brand.invalid && (brand.dirty || brand.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
                                               <div *ngIf="brand.errors && brand.errors['required']">Brand is required.</div>
                                               <div *ngIf="brand.errors && brand.errors['minlength']">Brand must be at least 2 characters long.</div>
-                                              <div *ngIf="brand.errors && brand.errors['maxlength']">Brand cannot exceed 10 characters.</div>
+                                              <div *ngIf="brand.errors && brand.errors['maxlength']">Brand cannot exceed 20 characters.</div>
                                             </div>
                                             
                                             </div>
                                             <div class="form-outline mb-4">
                                                 <label class="form-label" for="form3Example1n">adresse</label>
-                                                <input class="form-control" type="text" id="form3Example1n" name="adresse"  [(ngModel)]="product.adresse"  required minlength="5" maxlength="10" #adresse="ngModel">
+                                                <input class="form-control" type="text" id="form3Example1n" name="adresse"  [(ngModel)]="product.adresse"  required minlength="5" maxlength="20" #adresse="ngModel">
                                                 <div *ngIf="adresse.invalid && (adresse.dirty || adresse.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
                                                   <div *ngIf="adresse.errors && adresse.errors['required']">Adresse is required.</div>
                                                   <div *ngIf="adresse.errors && adresse.errors['minlength']">Adresse must be at least 5 characters long.</div>
-                                                  <div *ngIf="adresse.errors && adresse.errors['maxlength']">Adresse cannot exceed 10 characters.</div>
+                                                  <div *ngIf="adresse.errors && adresse.errors['maxlength']">Adresse cannot exceed 20 characters.</div>
                                                 </div>
                                               </div>
                                               <div class="form-outline mb-4">
@@ -274,7 +154,7 @@
                                                 <div *ngIf="price.invalid && (price.dirty || price.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
                                                   <div *ngIf="price.errors && price.errors['required']">Price is required.</div>
                                                   <div *ngIf="price.errors && price.errors['min']">Price cannot be negative.</div>
-                                                  <div *ngIf="price.errors && price.errors['max']">Price cannot exceed $10,000.</div>
+                                                  <div *ngIf="price.errors && price.errors['max']">Price cannot exceed 10,000 dt</div>
                                                 </div>
                                               </div>
                                     <div class="row">
