--- a/PiFrontEnd/src/app/cart/cart.component.html
+++ b/PiFrontEnd/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
 
-      <table mat-table [dataSource]="cartDetails" class="mat-elevation-z8">
+      <table mat-table [dataSource]="cartDetails" class="mat-elevation-z8 move-down">
           
           <ng-container matColumnDef="Name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
