--- a/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
@@ -51,31 +51,26 @@
                         <!-- End Single Widget -->
                         <!-- Start Single Widget -->
                         <div class="single-widget">
+                            
+
                             <h3>All Categories</h3>
                             <ul class="list">
                                 <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-dinner"></i> Hotel & Travels<span>15</span></a>
+                                    <a href="javascript:void(0)"  (click)="showAllProducts()" 
+                                    [ngClass]="{'selected-button': isSelected('all')}">
+                                      <i class="lni lni-list"></i> All Products
+                                    </a>
+                                  </li>
+                                <li *ngFor="let category of categories">
+                                    <a href="javascript:void(0)" 
+                                    (click)="loadProductsByCategory(category.name)"  
+                                    [ngClass]="{'selected-button': isSelected(category)}">
+                                    <i class="{{ category.iconClass }}"></i> {{ category.name }}
+                                 </a>
                                 </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-control-panel"></i> Services <span>20</span></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-bullhorn"></i> Marketing <span>55</span></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-home"></i> Real Estate<span>35</span></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-bolt"></i> Electronics <span>60</span></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-tshirt"></i> Dress & Clothing <span>55</span></a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)"><i class="lni lni-diamond-alt"></i> Jewelry & Accessories
-                                        <span>45</span></a>
-                                </li>
-                            </ul>
+                               
+                              </ul>
+                            
                         </div>
                         <!-- End Single Widget -->
                         <!-- Start Single Widget -->
