--- a/PiFrontEnd/src/app/buy-product/buy-product.component.html
+++ b/PiFrontEnd/src/app/buy-product/buy-product.component.html
@@ -6,45 +6,68 @@
                 <form #orderForm="ngForm" (ngSubmit)="placeOrder(orderForm)">
                     <div class="container mt-5">
                         <div>
-                          <div class="form-outline mb-4">
-                            <label class="form-label">Full Name</label>
-                            <input class="form-control" type="text" [(ngModel)]="orderDetails.fullName" name="fullName">
-                          </div>
-                      
-                          <div class="form-outline mb-4">
-                            <label class="form-label">Full address</label>
-                            <input class="form-control" type="text" [(ngModel)]="orderDetails.fullAddress" name="fullAddress">
-                          </div>
-                      
-                          <div class="form-outline mb-4">
-                            <label class="form-label">Contact number</label>
-                            <input class="form-control" type="text" [(ngModel)]="orderDetails.contactNumber" name="contactNumber">
-                          </div>
-                      
-                          <div class="form-outline mb-4">
-                            <label class="form-label">Alternate contact number</label>
-                            <input class="form-control" type="text" [(ngModel)]="orderDetails.alternateContactNumber" name="alternateContactNumber">
-                          </div>
-                      
-                          <div align="right">
-                            <button type="button"  class="btn btn-primary">Place Order</button>
-                          </div>
-                        </div>
-                      
-                        <div class="mt-5">
-                          <h2>Stripe Checkout</h2>
-                          <div class="row mt-5">
-                            <div class="col-md-4" style="text-align: center;">
-                              <button (click)="pay(20)" class="btn btn-primary btn-block" style="font-weight: bold;">Pay</button>
-                            </div>
-                          </div>
-                          <p class="mt-5">
-                            Essayez avec le numéro de carte de test <b>4242 4242 4242 4242</b>, un numéro CVC aléatoire à trois chiffres, une date d'expiration future et un code postal américain aléatoire à cinq chiffres.
-                          </p>
-                        </div>
+                            <div class="container mt-5">
+                                <div>
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Full Name</label>
+                                        <input class="form-control" type="text" [(ngModel)]="orderDetails.fullName" name="fullName" required minlength="5" maxlength="50" #fullName="ngModel">
+                                        <div *ngIf="fullName.invalid && (fullName.dirty || fullName.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
+                                          <div *ngIf="fullName.errors && fullName.errors['required']">Full Name is required.</div>
+                                          <div *ngIf="fullName.errors && fullName.errors['minlength']">Full Name must be at least 5 characters long.</div>
+                                          <div *ngIf="fullName.errors && fullName.errors['maxlength']">Full Name cannot exceed 50 characters.</div>
+                                        </div>
+                                      </div>
+                                  
+                                      <div class="form-outline mb-4">
+                                        <label class="form-label">Full address</label>
+                                        <input class="form-control" type="text" [(ngModel)]="orderDetails.fullAddress" name="fullAddress" required minlength="5" maxlength="20" #fullAddress="ngModel">
+                                        <div *ngIf="fullAddress.invalid && (fullAddress.dirty || fullAddress.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
+                                          <div *ngIf="fullAddress.errors && fullAddress.errors['required']">Full address is required.</div>
+                                          <div *ngIf="fullAddress.errors && fullAddress.errors['minlength']">Full address must be at least 5 characters long.</div>
+                                          <div *ngIf="fullAddress.errors && fullAddress.errors['maxlength']">Full address cannot exceed 20 characters.</div>
+                                        </div>
+                                      </div>
+                                  
+                                      <div class="form-outline mb-4">
+                                        <label class="form-label">Contact number</label>
+                                        <input class="form-control" type="text" [(ngModel)]="orderDetails.contactNumber" name="contactNumber" required pattern="[0-9]{8}" #contactNumber="ngModel">
+                                        <div *ngIf="contactNumber.invalid && (contactNumber.dirty || contactNumber.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
+                                          <div *ngIf="contactNumber.errors && contactNumber.errors['required']">Contact number is required.</div>
+                                          <div *ngIf="contactNumber.errors && contactNumber.errors['pattern']">Contact number must be 8 digits.</div>
+                                        </div>
+                                      </div>
+                                  
+                                      <div class="form-outline mb-4">
+                                        <label class="form-label">Alternate contact number</label>
+                                        <input class="form-control" type="text" [(ngModel)]="orderDetails.alternateContactNumber" name="alternateContactNumber" pattern="[0-9]{8}" #alternateContactNumber="ngModel">
+                                        <div *ngIf="alternateContactNumber.invalid && (alternateContactNumber.dirty || alternateContactNumber.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
+                                          <div *ngIf="alternateContactNumber.errors && alternateContactNumber.errors['pattern']">Alternate contact number must be 8 digits.</div>
+                                        </div>
+                                      </div>
+                              
+                                  <div align="right">
+                                    <button type="submit"class="btn btn-primary"  [disabled]="!payEnabled">Place Order</button>
+                                    <div *ngIf="!payEnabled" style="color: rgb(255, 0, 187);">Vous devez d'abord effectuer le paiement.</div>
+                                  </div>
+                                </div>
+                              </div>
+                              
                       </div>
-                      
+                    </div>
+                    
                 </form>
+                <div class="container mt-5">
+                    <h2>Stripe Checkout</h2>
+                    <div class="row mt-5">
+                        <div class="col-md-4" style="text-align: center;">
+                            <button (click)="pay(orderDetails.orderProductQuantityList)" class="btn btn-primary btn-block" style="font-weight: bold;">Pay</button>
+                        </div>
+                    </div>
+                    <p class="mt-5">
+                        Essayez avec le numéro de carte de test <b>4242 4242 4242 4242</b>, un numéro CVC aléatoire à trois chiffres, une date d'expiration future et un code postal américain aléatoire à cinq chiffres.
+                    </p>
+                  </div>
+                  
 
             </div>
 
