--- a/PiFrontEnd/src/app/cart/cart.component.css
+++ b/PiFrontEnd/src/app/cart/cart.component.css
@@ -5,3 +5,10 @@ table {
 table td th{
     padding: 10px;
 }
+.container {
+    position: relative;
+    margin-top: 50px; 
+  }
+  .move-down {
+    margin-top: 50px; /* Ajustez cette valeur selon votre besoin */
+  }
