--- a/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
@@ -42,7 +42,7 @@
                     <div class="category-sidebar">
                         <!-- Start Single Widget -->
                         <div class="single-widget search">
-                            <h3>Search Ads</h3>
+                            <h3>Search by Name</h3>
                         
                                 <input class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
                              [(ngModel)]="searchTerm" type="search" placeholder="Search Here...">
@@ -168,7 +168,7 @@
                                                         <p class="location"><a href="javascript:void(0)"><i class="lni lni-map-marker">
                                                                 </i>{{a.adresse}}</a></p>
                                                         <ul class="info" >
-                                                            <li class="price">{{a.price}}</li>
+                                                            <li class="price">{{a.price}} dt</li>
                                                             <li class="like"><a href="javascript:void(0)"><i
                                                                         class="lni lni-heart"></i></a>
                                                             </li>
