--- a/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
@@ -68,7 +68,6 @@
       <div class="form-floating">
         <textarea class="form-control" placeholder="Leave a comment here" id="comment" name="comment" [(ngModel)]="comment" required minlength="2" maxlength="50" #commentField="ngModel"></textarea>
         <div *ngIf="commentField.invalid && (commentField.dirty || commentField.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
-            <div *ngIf="commentField.errors && commentField.errors['required']">Comment is required.</div>
             <div *ngIf="commentField.errors && commentField.errors['minlength']">Comment must be at least 2 characters long.</div>
             <div *ngIf="commentField.errors && commentField.errors['maxlength']">Comment cannot exceed 50 characters.</div>
         </div>
@@ -96,6 +95,8 @@
 
   
 </div>
+<!-- chatbot.component.html -->
+<div id="df-root"></div>
 
 
 </div>
