--- a/PiFrontEnd/src/app/BackOffice/sidebar-back/sidebar-back.component.html
+++ b/PiFrontEnd/src/app/BackOffice/sidebar-back/sidebar-back.component.html
@@ -142,7 +142,7 @@
     <li class="menu-item">
       <a href="javascript:void(0);" class="menu-link menu-toggle">
         <i class="menu-icon tf-icons bx bx-dock-top"></i>
-        <div data-i18n="Account Settings" routerLink="/back/orderInformation">orderInformation</div>
+        <div data-i18n="Account Settings" routerLink="/back/orderInformation">Order Information</div>
       </a>
       <ul class="menu-sub">
         <li class="menu-item">
@@ -165,7 +165,7 @@
     <li class="menu-item">
       <a href="javascript:void(0);" class="menu-link menu-toggle">
         <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
-        <div data-i18n="Authentications">Authentications</div>
+        <div routerLink="/back/stat">Statistique</div>
       </a>
       <ul class="menu-sub">
         <li class="menu-item">
