--- a/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
@@ -2,27 +2,33 @@
 
       <table mat-table [dataSource]="cartDetails" class="mat-elevation-z8 move-down">
           
-          <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="Description">
-              <th mat-header-cell *matHeaderCellDef> Description </th>
-              <td mat-cell *matCellDef="let element"> {{element.product.description}} </td>
-            </ng-container>
-  
-            <ng-container matColumnDef="Price">
-              <th mat-header-cell *matHeaderCellDef> Price </th>
-              <td mat-cell *matCellDef="let element"> {{element.product.price}} </td>
-            </ng-container>
-  
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let product">
+            <div>{{ product.name }}</div>
+          </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="Description">
+          <th mat-header-cell *matHeaderCellDef> Description </th>
+          <td mat-cell *matCellDef="let product">
+            <div>{{ product.description }}</div>
+          </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="Price">
+          <th mat-header-cell *matHeaderCellDef> Price </th>
+          <td mat-cell *matCellDef="let product">
+            <div>{{ product.price }}</div>
+          </td>
+        </ng-container>
+   
 
   
             <ng-container matColumnDef="Action">
               <th mat-header-cell *matHeaderCellDef> Action </th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="warn"  (click)="delete(element.cartId)">Delete</button> </td>
+              <td mat-cell *matCellDef="let product">
+                <button mat-raised-button color="warn"  (click)="removeFromCart(product.idProduct)">Delete</button> </td>
             </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
