--- a/PiFrontEnd/src/app/MarketPlacee/show-product-details/show-product-details.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/show-product-details/show-product-details.component.html
@@ -65,7 +65,7 @@
 
 <!--<div >
     <p>La catégorie la plus achetée est : "{{ mostPurchasedCategory }}"</p>
-  </div>--> 
+  </div>
   <div>
     <h1>Statistiques de la catégorie la plus achetée</h1>
     <div>
@@ -79,7 +79,7 @@
 
   <button class="btn btn-info btn-round  btn-lg"style="margin-right: 3px" routerLink="/">home</button>
   </div>
- 
+ --> 
   
 
   
