--- a/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
@@ -210,7 +210,18 @@
                                             <pagination-controls class="pagination" (pageChange)="p=$event"></pagination-controls>
                                           </div>
                                 <hr>
-
+                                <script>
+                                    window.embeddedChatbotConfig = {
+                                      chatbotId: "c4_fFbFsL-cYs9-NvhrVk",
+                                      domain: "www.chatbase.co",
+                                    };
+                                  </script>
+                                  <script
+                                    src="https://www.chatbase.co/embed.min.js"
+                                    chatbotId="c4_fFbFsL-cYs9-NvhrVk"
+                                    domain="www.chatbase.co"
+                                    defer></script>
+                                
                                         <div class="row">
                                             <div class="col-12">
                                                 <!-- Pagination 
