--- a/PiFrontEnd/src/app/FrontOffice/navbar-front/navbar-front.component.html
+++ b/PiFrontEnd/src/app/FrontOffice/navbar-front/navbar-front.component.html
@@ -24,7 +24,7 @@
                                     
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/marketplace" aria-label="Toggle navigation">Categories</a>
+                                    <a routerLink="/marketplace" aria-label="Toggle navigation">Market Place</a>
                                 </li>
                         
                                 <li class="nav-item">
