--- a/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
@@ -19,7 +19,7 @@
         <ng-container matColumnDef="Price">
           <th mat-header-cell *matHeaderCellDef> Price </th>
           <td mat-cell *matCellDef="let product">
-            <div>{{ product.price }}</div>
+            <div>{{ calculateDiscount(product.price) }}</div>
           </td>
         </ng-container>
    
