--- a/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="mt-3">
-        <b style="color: blueviolet;">Rs. {{product.price}} dt</b> &nbsp;
+        <b style="color: blueviolet;">Rs. {{ calculateDiscount(product.price) }} dt</b> &nbsp;
       </div>
       <p class="location">
         <i class="lni lni-map-marker"></i><a href="javascript:void(0)">{{product.adresse}} </a>
