--- a/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/marketplace/marketplace.component.html
@@ -168,9 +168,16 @@
                                                         <p class="location"><a href="javascript:void(0)"><i class="lni lni-map-marker">
                                                                 </i>{{a.adresse}}</a></p>
                                                         <ul class="info" >
-                                                            <li class="price">{{a.price}} dt</li>
-                                                            <li class="like"><a href="javascript:void(0)"><i
-                                                                        class="lni lni-heart"></i></a>
+                                                            <ul class="product-info">
+                                                                <li class="price">{{ a.price }} dt</li>
+                                                                <li class="discount">
+                                                                  - {{ calculateDiscount(a.price) }} dt
+                                                                </li>
+                                                              </ul>
+                                                              
+
+                                                           <li class="like"><a href="javascript:void(0)"><i
+                                                             class="lni lni-heart"></i></a>
                                                             </li>
                                                         </ul>
                                                    
@@ -205,10 +212,7 @@
                                                 <!-- End Single Item -->
                                             </div>
                                         </div>
-                                    
-                                        <div class="row justify-content-center mt-3">
-                                            <pagination-controls class="pagination" (pageChange)="p=$event"></pagination-controls>
-                                          </div>
+
                                 <hr>
                                 <script>
                                     window.embeddedChatbotConfig = {
@@ -238,6 +242,10 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row justify-content-center mt-3">
+                                        <pagination-controls class="pagination" (pageChange)="p=$event"></pagination-controls>
+                                      </div>
+                            <hr>
                                     <div class="tab-pane fade" id="nav-list" role="tabpanel"
                                         aria-labelledby="nav-list-tab">
                                         <div class="row">
