First push for Sprint1:annonce collocation

--- a/PiFrontEnd/src/app/BackOffice/sidebar-back/sidebar-back.component.html
+++ b/PiFrontEnd/src/app/BackOffice/sidebar-back/sidebar-back.component.html
@@ -140,6 +140,12 @@
       <span class="menu-header-text">Pages</span>
     </li>
     <li class="menu-item">
+      <a href="/AnnoanceAdmin" class="menu-link ">
+        <i class="menu-icon tf-icons fas fa-bullhorn"></i>
+        <div data-i18n="Account Settings">Announcement</div>
+      </a>
+    </li>
+    <li class="menu-item">
       <a href="javascript:void(0);" class="menu-link menu-toggle">
         <i class="menu-icon tf-icons bx bx-dock-top"></i>
         <div data-i18n="Account Settings">Account Settings</div>
