--- a/PiFrontEnd/src/styles.css
+++ b/PiFrontEnd/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import "~leaflet/dist/leaflet.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.my-custom-dialog-class {
+    width: 90;
+    height: 1200px;
+  }
