--- a/PiFrontEnd/src/app/add-collocation/add-collocation.component.css
+++ b/PiFrontEnd/src/app/add-collocation/add-collocation.component.css
@@ -4,7 +4,7 @@
   position: relative;
   border: 1px solid #ccc;
   }
-  
+
   .map-frame {
     width: 100%;
     height: 100%;
@@ -12,26 +12,12 @@
     top: 0;
     left: 0;
   }
-  
+
   #map {
     width: 100%;
     height: 100%;
   }
-  .custom-file-upload {
-    display: inline-block;
-    border: 1px solid #ccc;
-    padding: 6px 12px;
-    cursor: pointer;
-    background-color: #f8f9fa;
-    color: #495057;
-    border-radius: 4px;
-}
-/* Style pour le texte du bouton */
-.custom-file-upload::after {
-    content: 'Choose File';
-}
 
-/* Style pour le survol du bouton */
-.custom-file-upload:hover {
-    background-color: #e9ecef;
+.custom-file-upload{
+  display: none;
 }
